# jewel-ai

./: .env  Makefile  README.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0e9387ffcb06_init.py  92d24b768c90_add_analysis_json_and_variants_json_to_.py
apps/api/app/: __init__.py  config.py  database.py  main.py  seed.py
apps/api/app/inngest/: __init__.py  client.py  process_image.py
apps/api/app/middleware/: auth.py
apps/api/app/models/: __init__.py  credit.py  image_asset.py  subscription.py  user.py  workspace.py
apps/api/app/routers/: images.py  workspaces.py
apps/api/app/schemas/: __init__.py  process.py  status.py  upload.py
apps/api/app/services/: credit_service.py  job_service.py  s3_service.py
apps/api/app/workers/: __init__.py  analyzer.py  background.py  base.py  cleaning.py  masking.py  upscaling.py  utils.py
apps/web/: package-lock.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  constants.ts
